2010-11-10  Glenn Morris  <rgm@gnu.org>

	* eshell/esh-util.el (eshell-time-less-p, eshell-time-to-seconds):
	Remove.
	(eshell-read-passwd, eshell-read-hosts): Use time-less-p.
	* eshell/esh-test.el (eshell-test, eshell-show-usage-metrics):
	* eshell/em-unix.el (eshell-show-elapsed-time, eshell/time):
	* eshell/em-pred.el (eshell-pred-file-time): Use float-time.
	* eshell/em-ls.el (eshell-ls-sort-entries): Use time-less-p.

	* eshell/em-unix.el (eshell-remove-entries, eshell/rm)
	(eshell-shuffle-files, eshell-shorthand-tar-command)
	(eshell-mvcpln-template, eshell/mv, eshell/cp, eshell/ln):
	Prefix dynamic locals `interactive', `preview', `recursive', `verbose'.
	* eshell/em-glob.el (eshell-extended-glob, eshell-glob-entries):
	Prefix dynamic local variable `matches'.

2010-11-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* net/browse-url.el (browse-url-mail): Insert body part of mailto url
	in mail buffer; make yank-action always a command that yanks original
	buffer.

2010-11-09  Glenn Morris  <rgm@gnu.org>

	* progmodes/tcl.el (tcl-hairy-scan-for-comment): Doc fix.

2010-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-completion-help): Specify the end of the
	completion field (bug#7211).

	* progmodes/python.el (python-font-lock-syntactic-keywords): (bug#7322)
	Fix handling of backslash escapes.
	(python-quote-syntax): Adjust accordingly.

2010-11-09  Richard Levitte  <richard@levitte.org>  (tiny change)

	* vc-mtn.el (vc-mtn-working-revision, vc-mtn-after-dir-status)
	(vc-mtn-workfile-branch): Adjust to new output format.

2010-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (princ-list): Mark as obsolete.

2010-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/smie.el: New package.

2010-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (backup-by-copying-when-mismatch):
	Set `permanent-local' property.

	* net/tramp.el (tramp-handle-insert-file-contents): Do not set